--- a/source/setup.Rmd
+++ b/source/setup.Rmd
@@ -162,8 +162,8 @@ image_read("img/setup/docker-4.png") |>
 You can also run the worksheets accompanying this book on your computer
 using [JupyterLab Desktop](https://github.com/jupyterlab/jupyterlab-desktop).
 The advantage of JupyterLab Desktop over Docker is that it can be easier to install;
-JupyterLab Desktop runs entirely within your operating system (like most software!),
-while Docker doesn't and can sometimes run into some fairly technical issues that require expert
+JupyterLab Desktop is just like any other software you install on your computer,
+while Docker is a bit special and can sometimes run into some fairly technical issues that require expert
 troubleshooting. On the other hand, if you are able to successfully install Docker, it essentially
 *guarantees* that the worksheets will work exactly as intended. With JupyterLab Desktop, on the other
 hand, you may not end up with the right versions of all the R packages that are installed, and the 
