--- a/source/setup.Rmd
+++ b/source/setup.Rmd
@@ -129,7 +129,7 @@ image_read("img/setup/docker-1.png") |>
   image_crop("3632x2000")
 ```
 
-Once the image is done downloading, click the "Images" button on the left side of the Docker Desktop window (\@ref(fig:docker-desktop-images)). You
+Once the image is done downloading, click the "Images" button on the left side of the Docker Desktop window (Figure \@ref(fig:docker-desktop-images)). You
 will see the recently downloaded image listed there under the "Local" tab.
 
 ```{r docker-desktop-images, echo = FALSE, fig.cap = "The Docker Desktop images tab.", fig.retina = 2, out.width="100%"}
