unscaled_wdbc -> wdbc_unscaled for consistency

--- a/source/classification1.Rmd
+++ b/source/classification1.Rmd
@@ -834,7 +834,7 @@ To keep things simple, we will just use the `Area`, `Smoothness`, and `Class`
 variables:
 
 ```{r 05-scaling-1, message = FALSE}
-unscaled_cancer <- read_csv("data/unscaled_wdbc.csv") |>
+unscaled_cancer <- read_csv("data/wdbc_unscaled.csv") |>
   mutate(Class = as_factor(Class)) |>
   mutate(Class = fct_recode(Class, "Benign" = "B", "Malignant" = "M")) |>
   select(Class, Area, Smoothness)
@@ -1377,13 +1377,13 @@ The `tidymodels` package collection also provides the `workflow`, a way to
 chain\index{tidymodels!workflow}\index{workflow|see{tidymodels}} together
 multiple data analysis steps without a lot of otherwise necessary code for
 intermediate steps. To illustrate the whole pipeline, let's start from scratch
-with the `unscaled_wdbc.csv` data.  First we will load the data, create a
+with the `wdbc_unscaled.csv` data.  First we will load the data, create a
 model, and specify a recipe for how the data should be preprocessed:
 
 ```{r 05-workflow, message = FALSE, warning = FALSE}
 # load the unscaled cancer data 
 # and make sure the response variable, Class, is a factor
-unscaled_cancer <- read_csv("data/unscaled_wdbc.csv") |>
+unscaled_cancer <- read_csv("data/wdbc_unscaled.csv") |>
   mutate(Class = as_factor(Class)) |>
   mutate(Class = fct_recode(Class, "Malignant" = "M", "Benign" = "B"))
 
