--- a/source/classification2.Rmd
+++ b/source/classification2.Rmd
@@ -329,7 +329,7 @@ library(tidymodels)
 set.seed(1)
 
 # load data
-cancer <- read_csv("data/unscaled_wdbc.csv") |>
+cancer <- read_csv("data/wdbc_unscaled.csv") |>
   # convert the character Class variable to the factor datatype
   mutate(Class = as_factor(Class))  |>
   # rename the factor values to be more readable
