remove forward ref to workflows in missing data material

--- a/source/classification1.Rmd
+++ b/source/classification1.Rmd
@@ -1354,8 +1354,7 @@ impute_missing_recipe
 hidden_print_cli(impute_missing_recipe)
 ```
 
-We can now include this recipe in a `workflow`. To visualize what mean
-imputation does, let's just apply the recipe directly to the `missing_cancer`
+To visualize what mean imputation does, let's just apply the recipe directly to the `missing_cancer`
 data frame using the `bake` function.  The imputation step fills in the missing
 entries with the mean values of their corresponding variables.
 
