minor wordsmith sync with py

--- a/source/classification2.Rmd
+++ b/source/classification2.Rmd
@@ -170,7 +170,7 @@ reported together with accuracy.  *Precision* quantifies how many of the
 positive predictions the classifier made were actually positive. Intuitively,
 we would like a classifier to have a *high* precision: for a classifier with
 high precision, if the classifier reports that a new observation is positive,
-we can trust that that new observation is indeed positive. We can compute the
+we can trust that the new observation is indeed positive. We can compute the
 precision of a classifier using the entries in the confusion matrix, with the
 formula
 
