working on jlab-desktop for ubuntu

--- a/source/setup.Rmd
+++ b/source/setup.Rmd
@@ -1,5 +1,16 @@
 # Setting up your computer {#move-to-your-own-machine}
 
+```{r setup-machine-setup, include = FALSE}
+library(tidyverse)
+library(cowplot)
+library(knitr)
+library(magick)
+
+knitr::opts_chunk$set(fig.align = "center")
+
+options(knitr.table.format = ifelse(knitr::is_latex_output(), "latex", "html"))
+```
+
 ## Overview
 
 In this chapter, you'll learn how to set up the software 
@@ -175,23 +186,62 @@ JupyterLab Desktop, the JupyterLab Git extension, and all of the R packages need
 
 ### Ubuntu
 
-First, we will install Git. Open the terminal and type the following commands:
-
+First, we will install Git for version control. 
+Open the terminal and type the following commands:
 ```
 sudo apt update
 sudo apt install git
 ```
-
 Next, visit the ["Installation" section of the JupyterLab Desktop homepage](https://github.com/jupyterlab/jupyterlab-desktop#installation).
-Download and run the installer for Ubuntu/Debian.
-To install the JupyterLab Git extension, run JupyterLab Desktop, 
-open a notebook, and run the following code in a cell:
+Download the `JupyterLab-Setup-Debian.deb` installer file for Ubuntu/Debian.
+Open a terminal, navigate to where the installer file was downloaded, and run the command
+```
+sudo dpkg -i JupyterLab-Setup-Debian.deb
+```
+Run JupyterLab Desktop using the command
+```
+jlab
+```
+You will see python environment not found. click to use the bundled installer
+
+Next, we need to add the JupyterLab Git extension so that
+we can use version control directly from within JupyterLab Desktop.
+In JupyterLab Desktop, click "New notebook...", and run the following code in a cell:
 ```
 %pip install --upgrade jupyterlab-git
 ```
-Finally, we will install the IRkernel and R packages
+To have the software \index{R installation} used in this book available to you in JupyterLab, 
+you will need to install the R programming language via the IRkernel.
+Run the following code in another cell:
+```
+%conda install -c conda-forge r-irkernel
+```
+Finally, you will need several R packages.
+To install versions of these that are compatible with the accompanying worksheets, 
+type the command shown below into into another cell:
+```
+%conda env update --file https://raw.githubusercontent.com/UBC-DSCI/data-science-a-first-intro-worksheets/main/environment.yml
+```
+This command installs the specific R and package versions specified in
+the `environment.yml` file found in 
+[the worksheets repository](https://worksheets.datasciencebook.ca).
+We will always keep the versions in the `environment.yml` file updated
+so that they are compatible with the exercise worksheets that accompany the book.
 
-TODO
+> You can also install the *latest* version of R 
+> and the R packages used in this book by typing the commands shown below 
+> in the Anaconda Prompt (Windows) 
+> or terminal (MacOS and Ubuntu) and pressing enter.
+> **Be careful though:** this may install package versions that are
+> incompatible with the worksheets that accompany the book; the automated
+> exercise feedback might tell you your answers are not correct even though
+> they are!
+> 
+> ```
+> %conda install -c conda-forge r-base r-cowplot r-ggally r-gridextra 
+> %conda install -c conda-forge r-kknn r-rpostgres r-rsqlite r-scales r-testthat 
+> %conda install -c conda-forge r-tidymodels r-tidyverse unixodbc
+> ```
 
 ### Windows
 
@@ -209,50 +259,6 @@ conda install -y nodejs
 pip install --upgrade jupyterlab-git
 
 R, R packages, and the IRkernel 
-
-To have the software \index{R installation} used in this book available to you in JupyterLab, 
-you will need to install the R programming language,
-several R packages,
-and the \index{kernel!installation} IRkernel.
-To install versions of these that are compatible with the accompanying worksheets, 
-type the command shown below into the Anaconda Prompt (Windows) 
-or terminal (MacOS and Ubuntu). 
-
-```
-conda env update --file https://raw.githubusercontent.com/UBC-DSCI/data-science-a-first-intro-worksheets/main/environment.yml
-```
-
-This command installs the specific R and package versions specified in
-the `environment.yml` file found in 
-[the worksheets repository](https://worksheets.datasciencebook.ca).
-We will always keep the versions in the `environment.yml` file updated
-so that they are compatible with the exercise worksheets that accompany the book.
-
-> You can also install the *latest* version of R 
-> and the R packages used in this book by typing the commands shown below 
-> in the Anaconda Prompt (Windows) 
-> or terminal (MacOS and Ubuntu) and pressing enter.
-> **Be careful though:** this may install package versions that are
-> incompatible with the worksheets that accompany the book; the automated
-> exercise feedback might tell you your answers are not correct even though
-> they are!
-> 
-> ```
-> conda install -c conda-forge -y \
->   r-base \
->   r-cowplot \
->   r-ggally \
->   r-gridextra \
->   r-irkernel \
->   r-kknn \
->   r-rpostgres \
->   r-rsqlite \
->   r-scales \
->   r-testthat \
->   r-tidymodels \
->   r-tidyverse \
->   unixodbc
-> ```
 
 ## Finishing up installation
 
