setup rough done

--- a/source/setup.Rmd
+++ b/source/setup.Rmd
@@ -202,202 +202,87 @@ Run JupyterLab Desktop using the command
 ```
 jlab
 ```
-You will see python environment not found. click to use the bundled installer
+Next, in the JupyterLab Desktop graphical interface that appears (Figure \@ref(fig:setup-jlab-gui)), 
+you will see text at the bottom saying "Python environment not found". Click "Install using the bundled installer"
+to set up the environment.
 
-Next, we need to add the JupyterLab Git extension so that
-we can use version control directly from within JupyterLab Desktop.
-In JupyterLab Desktop, click "New notebook...", and run the following code in a cell:
+```{r setup-jlab-gui, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "The JupyterLab Desktop graphical user interface.", out.width="85%", fig.align = "center", fig.retina = 2}
+knitr::include_graphics("img/setup/jlab-1.png")
 ```
-%pip install --upgrade jupyterlab-git
+
+Next, we need to add the JupyterLab Git extension (so that
+we can use version control directly from within JupyterLab Desktop),
+the IRkernel (to enable the R programming language),
+and various R software packages. Click "New session..." in the JupyterLab Desktop
+user interface, then scroll to the bottom, and click "Terminal" under the "Other" heading (Figure \@ref(fig:setup-jlab-gui-2)).
+```{r setup-jlab-gui-2, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "A JupyterLab Desktop session, showing the Terminal option at the bottom.", out.width="85%", fig.align = "center", fig.retina = 2}
+knitr::include_graphics("img/setup/jlab-2.png")
 ```
-To have the software \index{R installation} used in this book available to you in JupyterLab, 
-you will need to install the R programming language via the IRkernel.
-Run the following code in another cell:
+In this terminal, run the following commands:
 ```
-%conda install -c conda-forge r-irkernel
+pip install --upgrade jupyterlab-git
+conda env update --file https://raw.githubusercontent.com/UBC-DSCI/data-science-a-first-intro-worksheets/main/environment.yml
 ```
-Finally, you will need several R packages.
-To install versions of these that are compatible with the accompanying worksheets, 
-type the command shown below into into another cell:
-```
-%conda env update --file https://raw.githubusercontent.com/UBC-DSCI/data-science-a-first-intro-worksheets/main/environment.yml
-```
-This command installs the specific R and package versions specified in
+The second command installs the specific R and package versions specified in
 the `environment.yml` file found in 
 [the worksheets repository](https://worksheets.datasciencebook.ca).
 We will always keep the versions in the `environment.yml` file updated
 so that they are compatible with the exercise worksheets that accompany the book.
 
 > You can also install the *latest* version of R 
-> and the R packages used in this book by typing the commands shown below 
-> in the Anaconda Prompt (Windows) 
-> or terminal (MacOS and Ubuntu) and pressing enter.
+> and the R packages used in this book by instead typing the commands shown below 
 > **Be careful though:** this may install package versions that are
 > incompatible with the worksheets that accompany the book; the automated
 > exercise feedback might tell you your answers are not correct even though
 > they are!
 > 
 > ```
-> %conda install -c conda-forge r-base r-cowplot r-ggally r-gridextra 
-> %conda install -c conda-forge r-kknn r-rpostgres r-rsqlite r-scales r-testthat 
-> %conda install -c conda-forge r-tidymodels r-tidyverse unixodbc
+> pip install --upgrade jupyterlab-git
+> conda install -c conda-forge r-base r-cowplot r-ggally r-gridextra 
+> conda install -c conda-forge r-kknn r-rpostgres r-rsqlite r-scales r-testthat 
+> conda install -c conda-forge r-tidymodels r-tidyverse unixodbc
 > ```
+
+Once all of the software installation is complete, it is a good idea to restart 
+JupyterLab Desktop entirely before you proceed to doing your data analysis.
+This will ensure all the software and settings you put in place are 
+correctly set up and ready for use.
 
 ### Windows
 
-TODO
+First, we will install Git for version control. 
+Go to [the Git download page](https://git-scm.com/download/win) and 
+download the Windows version of Git. Once the download has finished, run the installer and accept 
+the default configuration for all pages.
+Next, visit the ["Installation" section of the JupyterLab Desktop homepage](https://github.com/jupyterlab/jupyterlab-desktop#installation).
+Download the `JupyterLab-Setup-Windows.exe` installer file for Windows.
+Double-click the installer to run it, use the default settings.
+Run JupyterLab Desktop by clicking the icon on your desktop.
+
+From this point onward, with JupyterLab Desktop running,
+follow the instructions in the Ubuntu section on how to set up the
+environment, install the JupyterLab Git extension, and install
+the various R software packages needed for the worksheets.
+
 
 ### MacOS
 
-TODO
-
-
-
-- jupyterlab-git 
-conda install -c conda-forge -y jupyterlab
-conda install -y nodejs
-pip install --upgrade jupyterlab-git
-
-R, R packages, and the IRkernel 
-
-## Finishing up installation
-
-It is good practice to restart all the programs you used when installing this
-software before you proceed to doing your data analysis.
-This includes restarting JupyterLab as well as the terminal (MacOS and Ubuntu) 
-or the Anaconda Prompt (Windows).
-This will ensure all the software and settings you put in place are 
-correctly sourced. 
-
-
-## OLD MATERIAL
-
-### Git
-
-As shown in Chapter \@ref(Getting-started-with-version-control), 
-Git \index{git!installation} is a very useful tool for version controlling your projects, 
-as well as sharing your work with others. Here's how to install Git on 
-the following operating systems: 
-
-**Windows:** To install
-Git on Windows, go to <https://git-scm.com/download/win> and download the Windows 
-version of Git. Once the download has finished, run the installer and accept 
-the default configuration for all pages.
-
-**MacOS:** To install Git on Mac OS, 
-open the terminal ([how-to video](https://youtu.be/5AJbWEWwnbY)) 
+First, we will install Git for version control. 
+Open the terminal ([how-to video](https://youtu.be/5AJbWEWwnbY)) 
 and type the following command:
 
 ```
 xcode-select --install
 ```
+Next, visit the ["Installation" section of the JupyterLab Desktop homepage](https://github.com/jupyterlab/jupyterlab-desktop#installation).
+Download the `JupyterLab-Setup-MacOS-x64.dmg` or `JupyterLab-Setup-MacOS-arm64.dmg` installer file 
+(you need to know whether your computer has an Intel processor an
+Apple processor). Double-click the file to open the installer, then drag
+the JupyterLab Desktop icon to the Applications folder.  Double-click 
+the icon in the
+Applications folder to start JupyterLab Desktop.
 
-**Ubuntu:** To install Git on Ubuntu, open the terminal 
-and type the following commands:
-
-```
-sudo apt update
-sudo apt install git
-```
-
-
-### Miniconda
-
-To run Jupyter notebooks on your computer, 
-you will need to install the web-based platform JupyterLab. 
-But JupyterLab relies on Python, so we need to install Python first.
-We can install Python via
-the \index{miniconda} [miniconda Python package distribution](https://docs.conda.io/en/latest/miniconda.html).
-
-**Windows:** To install miniconda on Windows, download 
-the [latest Python 64-bit version from here](https://repo.anaconda.com/miniconda/Miniconda3-latest-Windows-x86_64.exe). 
-Once the download has finished, run the installer 
-and accept the default configuration for all pages. 
-After installation, you can open the Anaconda Prompt
-by opening the Start Menu and searching for the program called 
-"Anaconda Prompt (miniconda3)". 
-When this opens, you will see a prompt similar to 
-`(base) C:\Users\your_name`. 
-
-**MacOS:** To install miniconda on MacOS, you will need to use a different 
-installation method depending on the type of processor chip your computer has.
-
-If your Mac computer has an Intel x86 processor chip you can download 
-the [latest Python 64-bit version from here](https://repo.anaconda.com/miniconda/Miniconda3-latest-MacOSX-x86_64.pkg). 
-After the download has finished, run the installer and accept the default 
-configuration for all pages.
-
-If your Mac computer has an Apple M1 processor chip you can download 
-the [latest Python 64-bit version from here](https://repo.anaconda.com/miniconda/Miniconda3-latest-MacOSX-arm64.sh).
-After the download has finished, you need to run the downloaded script in the terminal using a command
-like:
-
-```
-bash path/to/Miniconda3-latest-MacOSX-arm64.sh
-```
-
-Make sure to replace `path/to/` with the path of the folder
-containing the downloaded script. Most computers will save downloaded files to the `Downloads` folder. 
-If this is the case for your computer, you can run the script in the terminal by typing:
-
-```
-bash Downloads/Miniconda3-latest-MacOSX-arm64.sh
-```
-
-The instructions for the installation will then appear. 
-Follow the prompts and agree to accepting the license,
-the default installation location,
-and to running `conda init`, which makes `conda` available from the terminal.
-
-**Ubuntu:** To install miniconda on Ubuntu, first download
-the [latest Python 64-bit version from here](https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh). 
-After the download has finished, open the terminal and execute the following 
-command:
-
-```
-bash path/to/Miniconda3-latest-Linux-x86_64.sh
-```
-
-Make sure to replace `path/to/` with the path of the folder containing the downloaded
-script. Most often this file will be downloaded to the `Downloads` folder.
-If this is the case for your computer, you can run the script in the terminal by typing:
-
-```
-bash Downloads/Miniconda3-latest-Linux-x86_64.sh
-```
-
-The instructions for the installation will then appear. 
-Follow the prompts and agree to accepting the license,
-the default installation location,
-and to running `conda init`, which makes `conda` available from the terminal.
-
-### JupyterLab
-
-With miniconda set up, we can now install JupyterLab \index{JupyterLab installation} and the Jupyter Git \index{git!Jupyter extension} extension. 
-Type the following into the Anaconda Prompt (Windows) or the terminal (MacOS and Ubuntu) and press enter:
-
-```
-conda install -c conda-forge -y jupyterlab
-conda install -y nodejs
-pip install --upgrade jupyterlab-git
-```
-
-To test that your JupyterLab installation is functional, you can type 
-`jupyter lab` into the Anaconda Prompt (Windows) 
-or terminal (MacOS and Ubuntu) and press enter. This should open a new 
-tab in your default browser with the JupyterLab interface. To exit out of 
-JupyterLab you can click `File -> Shutdown`, or go to the terminal from which 
-you launched JupyterLab, hold `Ctrl`, and press `C` twice.
-
-To improve the experience of using R in JupyterLab, you should also add an extension 
-that allows you to set up keyboard shortcuts for inserting text.
-By default, 
-this extension creates shortcuts for inserting two of the most common R 
-operators: `<-` and `|>`. Type the following in the Anaconda Prompt (Windows)
-or terminal (MacOS and Ubuntu) and press enter:
-
-```
-jupyter labextension install @techrah/text-shortcuts
-```
-
-
+From this point onward, with JupyterLab Desktop running,
+follow the instructions in the Ubuntu section on how to set up the
+environment, install the JupyterLab Git extension, and install
+the various R software packages needed for the worksheets.
