Clarify what the weight function does

--- a/source/classification1.Rmd
+++ b/source/classification1.Rmd
@@ -719,8 +719,8 @@ cancer_train
 
 Next, we create a *model specification* for \index{tidymodels!model specification} $K$-nearest neighbors classification
 by calling the `nearest_neighbor` function, specifying that we want to use $K = 5$ neighbors
-(we will discuss how to choose $K$ in the next chapter) and the straight-line 
-distance (`weight_func = "rectangular"`). The `weight_func` argument controls
+(we will discuss how to choose $K$ in the next chapter) and that each neighboring point should have the same weight when voting
+(`weight_func = "rectangular"`). The `weight_func` argument controls
 how neighbors vote when classifying a new observation; by setting it to `"rectangular"`,
 each of the $K$ nearest neighbors gets exactly 1 vote as described above. Other choices, 
 which weigh each neighbor's vote differently, can be found on 
