--- a/source/setup.Rmd
+++ b/source/setup.Rmd
@@ -90,7 +90,7 @@ image_read("img/setup/ubuntu-docker.png") |>
 ```
 
 More information on installing and running Docker on Ubuntu, as well as troubleshooting tips, can be found
-[in the online Docker documetation](https://docs.docker.com/engine/install/ubuntu/).
+[in the online Docker documentation](https://docs.docker.com/engine/install/ubuntu/).
 
 ### MacOS
 
@@ -107,7 +107,7 @@ Once Docker is installed and running, follow the instructions below in the Windo
 for finding and running the virtual machine we have made available for this book.
 More information on installing and running
 Docker on MacOS, as well as troubleshooting tips, can be found [in the online
-Docker documetation](https://docs.docker.com/desktop/install/mac-install/).
+Docker documentation](https://docs.docker.com/desktop/install/mac-install/).
 
 ### Windows
 
@@ -127,7 +127,7 @@ Occasionally, when you first run Docker on Windows, you will encounter an error 
   to help you with this, as editing the BIOS can be dangerous. Detailed instructions for doing this are beyond the scope of this book. 
 More information on installing and running
 Docker on Windows, as well as troubleshooting tips, can be found [in the online
-Docker documetation](https://docs.docker.com/desktop/install/windows-install/).
+Docker documentation](https://docs.docker.com/desktop/install/windows-install/).
 
 
 Once Docker is running (in either Windows or MacOS), you need to download and run the virtual machine that we have made available
