improvements to setup

--- a/source/setup.Rmd
+++ b/source/setup.Rmd
@@ -68,7 +68,7 @@ all software packages needed run the worksheets that come with this book.
 
 ### Ubuntu
 
-To install Docker on Ubuntu, open the terminal and enter the following five commands.
+**Installation** To install Docker on Ubuntu, open the terminal and enter the following five commands.
 ```
 sudo apt update
 sudo apt install ca-certificates curl gnupg
@@ -76,7 +76,8 @@ curl -fsSL https://get.docker.com -o get-docker.sh
 sudo chmod u+x get-docker.sh
 sudo sh get-docker.sh
 ```
-Then in the terminal, navigate to the directory where you want to run JupyterLab, and run
+
+**Running JupyterLab** In the terminal, navigate to the directory where you want to run JupyterLab, and run
 the following command.
 ```
 docker run --rm -v $(pwd):/home/jovyan/work -p 8888:8888 ubcdsci/r-dsci-100:20230724142640d8f06f jupyter lab
@@ -94,7 +95,7 @@ More information on installing and running Docker on Ubuntu, as well as troubles
 
 ### MacOS
 
-To install Docker on MacOS, visit [the online Docker
+**Installation** To install Docker on MacOS, visit [the online Docker
 documentation](https://docs.docker.com/desktop/install/mac-install/), and
 download the `Docker.dmg` installation file that is appropriate for your
 computer (you need to know whether your computer has an Intel processor an
@@ -103,15 +104,14 @@ the Docker icon to the Applications folder.  Double-click Docker.app in the
 Applications folder to start Docker. In the installation window, use the
 recommended settings.
 
-Once Docker is installed and running, follow the instructions below in the Windows section
-for finding and running the virtual machine we have made available for this book.
-More information on installing and running
+**Running JupyterLab** Once Docker is installed and running, follow the instructions below in 
+the Windows section on *Running JupyterLab* (the user interface is the same). More information on installing and running
 Docker on MacOS, as well as troubleshooting tips, can be found [in the online
 Docker documentation](https://docs.docker.com/desktop/install/mac-install/).
 
 ### Windows
 
-To install Docker on Windows, visit [the online Docker documentation](https://docs.docker.com/desktop/install/windows-install/),
+**Installation** To install Docker on Windows, visit [the online Docker documentation](https://docs.docker.com/desktop/install/windows-install/),
 and download the `Docker Desktop Installer.exe` file. Double-click the file to open the installer
 and follow the instructions on the installation wizard, choosing **WSL-2** instead of **Hyper-V** when prompted.
 
@@ -129,8 +129,7 @@ More information on installing and running
 Docker on Windows, as well as troubleshooting tips, can be found [in the online
 Docker documentation](https://docs.docker.com/desktop/install/windows-install/).
 
-
-Once Docker is running (in either Windows or MacOS), you need to download and run the virtual machine that we have made available
+**Running JupyterLab** Once Docker is running (in either Windows or MacOS), you need to download and run the virtual machine that we have made available
 for the worksheets. In the search bar, enter `ubcdsci/r-dsci-100`, as this is the name of the virtual machine image. You will be presented
 with a few options (Figure \@ref(fig:docker-desktop-search)). In the "Tag" drop down menu, click the tag `20230724142640d8f06f` to select the 
 correct version of the image. Then click the "Pull" button to download the image.
@@ -186,7 +185,7 @@ JupyterLab Desktop, the JupyterLab Git extension, and all of the R packages need
 
 ### Ubuntu
 
-First, we will install Git for version control. 
+**Installation** First, we will install Git for version control. 
 Open the terminal and type the following commands:
 ```
 sudo apt update
@@ -202,6 +201,7 @@ Run JupyterLab Desktop using the command
 ```
 jlab
 ```
+**Configuring JupyterLab Desktop**
 Next, in the JupyterLab Desktop graphical interface that appears (Figure \@ref(fig:setup-jlab-gui)), 
 you will see text at the bottom saying "Python environment not found". Click "Install using the bundled installer"
 to set up the environment.
@@ -250,7 +250,7 @@ correctly set up and ready for use.
 
 ### Windows
 
-First, we will install Git for version control. 
+**Installation** First, we will install Git for version control. 
 Go to [the Git download page](https://git-scm.com/download/win) and 
 download the Windows version of Git. Once the download has finished, run the installer and accept 
 the default configuration for all pages.
@@ -259,7 +259,7 @@ Download the `JupyterLab-Setup-Windows.exe` installer file for Windows.
 Double-click the installer to run it, use the default settings.
 Run JupyterLab Desktop by clicking the icon on your desktop.
 
-From this point onward, with JupyterLab Desktop running,
+**Configuring JupyterLab Desktop** From this point onward, with JupyterLab Desktop running,
 follow the instructions in the Ubuntu section on how to set up the
 environment, install the JupyterLab Git extension, and install
 the various R software packages needed for the worksheets.
@@ -267,7 +267,7 @@ the various R software packages needed for the worksheets.
 
 ### MacOS
 
-First, we will install Git for version control. 
+**Installation** First, we will install Git for version control. 
 Open the terminal ([how-to video](https://youtu.be/5AJbWEWwnbY)) 
 and type the following command:
 
@@ -282,7 +282,7 @@ the JupyterLab Desktop icon to the Applications folder.  Double-click
 the icon in the
 Applications folder to start JupyterLab Desktop.
 
-From this point onward, with JupyterLab Desktop running,
+**Configuring JupyterLab Desktop** From this point onward, with JupyterLab Desktop running,
 follow the instructions in the Ubuntu section on how to set up the
 environment, install the JupyterLab Git extension, and install
 the various R software packages needed for the worksheets.
