added more info about apple processors

--- a/source/setup.Rmd
+++ b/source/setup.Rmd
@@ -95,19 +95,22 @@ More information on installing and running Docker on Ubuntu, as well as troubles
 
 ### MacOS
 
-**Installation** To install Docker on MacOS, visit [the online Docker
-documentation](https://docs.docker.com/desktop/install/mac-install/), and
+**Installation** To install Docker on MacOS,
+visit [the online Docker documentation](https://docs.docker.com/desktop/install/mac-install/), and
 download the `Docker.dmg` installation file that is appropriate for your
-computer (you need to know whether your computer has an Intel processor an
-Apple processor). Double-click the file to open the installer, then drag
-the Docker icon to the Applications folder.  Double-click Docker.app in the
-Applications folder to start Docker. In the installation window, use the
-recommended settings.
+computer. To know which installer is right for your machine, you need to know 
+whether your computer has an Intel processor (older machines) or an
+Apple processor (newer machines); the [Apple support page](https://support.apple.com/en-ca/HT211814) has
+information to help you determine which processor you have. Once downloaded, double-click 
+the file to open the installer, then drag the Docker icon to the Applications folder.  
+Double-click the icon in the Applications folder to start Docker. In the installation 
+window, use the recommended settings.
 
-**Running JupyterLab** Once Docker is installed and running, follow the instructions below in 
-the Windows section on *Running JupyterLab* (the user interface is the same). More information on installing and running
-Docker on MacOS, as well as troubleshooting tips, can be found [in the online
-Docker documentation](https://docs.docker.com/desktop/install/mac-install/).
+**Running JupyterLab** Once Docker is installed and running, follow the
+instructions below in the Windows section on *Running JupyterLab* (the user
+interface is the same). More information on installing and running Docker on
+MacOS, as well as troubleshooting tips, can be 
+found [in the online Docker documentation](https://docs.docker.com/desktop/install/mac-install/).
 
 ### Windows
 
@@ -275,12 +278,14 @@ and type the following command:
 xcode-select --install
 ```
 Next, visit the ["Installation" section of the JupyterLab Desktop homepage](https://github.com/jupyterlab/jupyterlab-desktop#installation).
-Download the `JupyterLab-Setup-MacOS-x64.dmg` or `JupyterLab-Setup-MacOS-arm64.dmg` installer file 
-(you need to know whether your computer has an Intel processor an
-Apple processor). Double-click the file to open the installer, then drag
+Download the `JupyterLab-Setup-MacOS-x64.dmg` or `JupyterLab-Setup-MacOS-arm64.dmg` installer file. 
+To know which installer is right for your machine, you need to know 
+whether your computer has an Intel processor (older machines) or an
+Apple processor (newer machines); the [Apple support page](https://support.apple.com/en-ca/HT211814) has
+information to help you determine which processor you have.
+Once downloaded, double-click the file to open the installer, then drag
 the JupyterLab Desktop icon to the Applications folder.  Double-click 
-the icon in the
-Applications folder to start JupyterLab Desktop.
+the icon in the Applications folder to start JupyterLab Desktop.
 
 **Configuring JupyterLab Desktop** From this point onward, with JupyterLab Desktop running,
 follow the instructions in the Ubuntu section on how to set up the
