--- a/source/setup.Rmd
+++ b/source/setup.Rmd
@@ -13,16 +13,16 @@ options(knitr.table.format = ifelse(knitr::is_latex_output(), "latex", "html"))
 
 ## Overview
 
-In this chapter, you'll learn how to set up the software 
-needed to follow along with this book on your own computer.
-Given that installation instructions can vary
-widely based on the computer setup, we have created instructions for multiple
-operating systems. In particular, the installation instructions below have
-been verified to work on a computer that:
+In this chapter, you'll learn how to set up the software needed to follow along
+with this book on your own computer.  Given that installation instructions can
+vary based on computer setup, we provide instructions for
+multiple operating systems (Ubuntu Linux, MacOS, and Windows). 
+Although the instructions in this chapter will likely work on many systems, 
+we have specifically verified that they work on a computer that:
 
 - runs one of the following operating systems: 
   - Ubuntu 22.04
-  - macOS Big Sur (version 11.4.x or 11.5.x)
+  - macOS 13 Ventura
   - Windows 10 Home
 - uses a 64-bit CPU,
 - has a connection to the internet,
