--- a/source/setup.Rmd
+++ b/source/setup.Rmd
@@ -20,10 +20,7 @@ multiple operating systems (Ubuntu Linux, MacOS, and Windows).
 Although the instructions in this chapter will likely work on many systems, 
 we have specifically verified that they work on a computer that:
 
-- runs one of the following operating systems: 
-  - Ubuntu 22.04
-  - macOS 13 Ventura
-  - Windows 10 Home
+- runs Windows 10 Home, MacOS 13 Ventura, or Ubuntu 22.04,
 - uses a 64-bit CPU,
 - has a connection to the internet,
 - uses English as the default language.
@@ -175,12 +172,10 @@ image_read("img/setup/docker-4.png") |>
 You can also run the worksheets accompanying this book on your computer
 using [JupyterLab Desktop](https://github.com/jupyterlab/jupyterlab-desktop).
 The advantage of JupyterLab Desktop over Docker is that it can be easier to install;
-JupyterLab Desktop is just like any other software you install on your computer,
-while Docker is a bit special and can sometimes run into some fairly technical issues that require expert
-troubleshooting. On the other hand, if you are able to successfully install Docker, it essentially
-*guarantees* that the worksheets will work exactly as intended. With JupyterLab Desktop, on the other
-hand, you may not end up with the right versions of all the R packages that are installed, and the 
-worksheets may run into bugs.
+Docker can sometimes run into some fairly technical issues (especially on Windows computers) 
+that require expert troubleshooting. The downside of JupyterLab Desktop is that there is a (very) small chance that 
+you may not end up with the right versions of all the R packages needed for the worksheets. Docker, on the other hand,
+*guarantees* that the worksheets will work exactly as intended. 
 
 In this section, we will cover how to install Git (for version control, as discussed in Chapter \@ref(Getting-started-with-version-control)),
 JupyterLab Desktop, the JupyterLab Git extension, and all of the R packages needed to run the code in this book.
@@ -248,7 +243,7 @@ Double-click the installer to run it, use the default settings.
 Run JupyterLab Desktop by clicking the icon on your desktop.
 
 **Configuring JupyterLab Desktop** From this point onward, with JupyterLab Desktop running,
-follow the instructions in the Ubuntu section on how to set up the
+follow the instructions in the Ubuntu section on *Configuring JupyterLab Desktop* to set up the
 environment, install the JupyterLab Git extension, and install
 the various R software packages needed for the worksheets.
 
@@ -273,6 +268,7 @@ the JupyterLab Desktop icon to the Applications folder.  Double-click
 the icon in the Applications folder to start JupyterLab Desktop.
 
 **Configuring JupyterLab Desktop** From this point onward, with JupyterLab Desktop running,
-follow the instructions in the Ubuntu section on how to set up the
+follow the instructions in the Ubuntu section on *Configuring JupyterLab Desktop* to set up the
 environment, install the JupyterLab Git extension, and install
 the various R software packages needed for the worksheets.
+
